# controllers/todoController.go
@@ -16,8 +16,15 @@ var (
 	appJSON = "application/json"
 )
 
-
-
+// CreateTodo godoc
+// @Summary Create todos.
+// @Description create new todos with input payload.
+// @Tags todos
+// @Accept json
+// @Produce json
+// @Param   Title     query    string     true        "title todo"
+// @Success 200 {object} map[string]interface{}
+// @Router /todos [post]
 func CreateTodo(c *gin.Context) {
 	db := database.GetDB()
 	contentType := helpers.GetContentType(c)
@@ -54,6 +61,15 @@ func CreateTodo(c *gin.Context) {
 	})
 
 }
+
+// GetTodos getTodo godoc
+//@Summary get todos
+//@Description create new todos with input payload.
+//@Tags todos
+//@Accept json
+//@Produce json
+//@Success 200 {object} map[string]interface{}
+//@Router /todos [get]
 func GetTodos(c *gin.Context) {
 	db := database.GetDB()
 	contentType := helpers.GetContentType(c)
@@ -89,7 +105,7 @@ func GetTodos(c *gin.Context) {
 			"message": "Data kosong",
 			"data":    Todos,
 		})
-	}else {
+	} else {
 		c.JSON(http.StatusCreated, gin.H{
 			"status":  true,
 			"message": "Success get data",
@@ -97,8 +113,17 @@ func GetTodos(c *gin.Context) {
 		})
 	}
 
-
 }
+
+// GetSingleTodo  get single Todo godoc
+//@Summary get single todos.
+//@Description get single todo.
+//@Tags todos
+//@Accept json
+//@Produce json
+// @Param   id     path    string     true        "todo id"
+//@Success 200 {object} map[string]interface{}
+//@Router /todos/:todoId [get]
 func GetSingleTodo(c *gin.Context) {
 	db := database.GetDB()
 	contentType := helpers.GetContentType(c)
@@ -135,7 +160,20 @@ func GetSingleTodo(c *gin.Context) {
 		"data":    Todo,
 	})
 
+
 }
+
+// UpdateTodo godoc
+// @Summary Update todos.
+// @Description update new todos with input payload.
+// @Tags todos
+// @Accept json
+// @Produce json
+// @Param   id     path    string     true        "todo id"
+// @Param   Title     query    string     true        "title todo"
+// @Param   Done     query    bool     true        "todo done or yet "
+// @Success 200 {object} map[string]interface{}
+// @Router /todos/:todoId [put]
 func UpdateTodo(c *gin.Context) {
 	db := database.GetDB()
 	contentType := helpers.GetContentType(c)
@@ -177,6 +215,16 @@ func UpdateTodo(c *gin.Context) {
 	})
 
 }
+
+// DeleteTodo godoc
+// @Summary Delete todos.
+// @Description delete todo.
+// @Tags todos
+// @Accept json
+// @Produce json
+// @Param   id     path    string     true        "todo id"
+// @Success 200 {object} map[string]interface{}
+// @Router /todos/:todoId [delete]
 func DeleteTodo(c *gin.Context) {
 	db := database.GetDB()
 	contentType := helpers.GetContentType(c)
