# main.go
@@ -1,6 +1,7 @@
 package main
 
 import (
+	_ "github.com/swaggo/http-swagger"
 	"hacktive8-golang-projek-1/database"
 	"hacktive8-golang-projek-1/router"
 )
@@ -13,31 +14,11 @@ import (
 // @contact.email yono.tri@gmail.com
 // @license.name Apache 2.0
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
-// @host localhost:9000
+// @host localhost:9001
 // @BasePath /
 
-
-// CreateTodo godoc
-// @Summary Show the status of server.
-// @Description create new todos with input payload.
-// @Tags todos
-// @Accept json
-// @Produce json
-// Param todos string true "title type string"  // masih belum sesuai ekpektasi
-// @Success 200 {object} map[string]interface{}
-// @Router /todos [post]
-
-
-//getTodo godoc
-// @Summary Show the status of server.
-// @Description create new todos with input payload.
-// @Tags getTodos
-// @Accept json
-// @Produce json
-// @Success 200 {object} map[string]interface{}
-// @Router /todos [get]
 func main() {
 	database.StartDB()
 	r := router.StartApp()
-	r.Run(":9000")
+	r.Run(":9001")
 }
